# CLibrary

./: README.md
gocreator-1.1/: AUTHORS  Makefile.in  configure  configure.in
gocreator-1.1/share/: Makefile.am  Makefile.in  class_c.template  class_h.template  interface_c.template  interface_h.template
gocreator-1.1/src/: Makefile.am  Makefile.in  config.in  config_file.c  config_file.h  create_file.c  create_file.h  goc_creator.c  goc_creator.h  utils.c  utils.h
